<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bar3">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/favouriteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchText"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/drawable_rectangle"
            android:text="@string/string_fav"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_16"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textEthinicity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/searchText"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/drawable_rectangle"
            android:text="@string/string_ethinic"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_16" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/memberList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout"
            android:layout_below="@+id/textEthinicity" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".6"
                android:gravity="center_horizontal"
                android:text="@string/sort"
                android:textColor="@color/color_bar2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/filter_button_pressed"
                android:text="@string/height"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/filter_button_pressed"
                android:text="@string/weight"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/errorViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/btnReload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload"
            android:textColor="@android:color/white"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>